fix: fonts being too small on mobile

--- a/sass/font.scss
+++ b/sass/font.scss
@@ -34,8 +34,9 @@ h1 { font-size: 5em;}
 h2 { font-size: 4em;}
 h3 { font-size: 1.6em; }
 
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 700px) {
     h1 { font-size: 3em; line-height: 1.5em;}
     h2 { font-size: 2em; line-height: 1.5em;}
     h3 { font-size: 1.2em; }
 }
+ */
